Update the version to 0.0.8-d1

--- a/cfbook.tex
+++ b/cfbook.tex
@@ -19,7 +19,7 @@
 \usepackage{upquote}
 
 \newcommand{\thetitle}{Python for Informatics: Exploring Information}
-\newcommand{\theversion}{0.0.7}
+\newcommand{\theversion}{0.0.8-d1}
 
 \makeindex
 
