--- a/cfbook.tex
+++ b/cfbook.tex
@@ -4746,7 +4746,7 @@ of attributes.  More typically called ``row''.
 
 So far we have been learning the Python language and then 
 learning how to use Python, the network, and databases 
-to maniulate data.
+to manipulate data.
 
 In this chapter, we take a look at 
 three 
@@ -4788,7 +4788,7 @@ in a database {\bf geodata.sqlite}.
 Before we use the geocoding API for each user-entered location, 
 we simply check to see if we already have the data for that 
 particular line of input.  The database is functioning as a 
-local "cache" of our geocoding data to make sure we never ask 
+local ``cache'' of our geocoding data to make sure we never ask 
 for the same data twice.
 
 You can re-start the process at any time by removing the file
@@ -4797,7 +4797,7 @@ You can re-start the process at any time by removing the file
 Run the {\bf geoload.py} program.   This program will read the input
 lines in {\bf where.data} and for each line check to see if it is already
 in the database and if we don't have the data for the location,
-call the geocoding API to retrieve the data and stre it in 
+call the geocoding API to retrieve the data and store it in 
 the database.
 
 Here is a sample run after there is already some data in the 
@@ -4838,7 +4838,7 @@ data items, you should not run into the daily rate limit, but if you
 had more data it might take several runs over several days to 
 get your database to have all of the geocoded data for your input.
 
-Once you have some data loaded into geodata.sqlite, you can 
+Once you have some data loaded into {\bf geodata.sqlite}, you can 
 visualize the data using the {\bf geodump.py} program.  This
 program reads the database and writes the file {\bf where.js}
 with the location, latitude, and longitude in the form of
@@ -4893,10 +4893,10 @@ want to check the JavaScript or developer console for your browser.
 In this application, we will perform some of the functions of a search
 engine.   We will first spider a small subset of the web and then run
 a highly over similified version of the Google page rank algorithm to
-to determine which pages are most highly connected and then vizualize
+to determine which pages are most highly connected and then visualize
 the page rank and connectivity of our small corner of the web.
-We will use the D2 JavaScript Visualization library 
-\url{http://d3js.org/} to product the visualization output.
+We will use the D2 JavaScript visualization library 
+\url{http://d3js.org/} to produce the visualization output.
 
 You can download and extract this application from:
 
@@ -4960,11 +4960,11 @@ run {\bf spdump.py} as follows:
 \afterverb
 %
 This shows the number of incoming links, the old page rank, the new page
-rank, the id of the page, and the url of the page.  The spdump.py program
+rank, the id of the page, and the url of the page.  The {\bf spdump.py} program
 only shows pages that have at least one incoming link to them.
 
 Once you have a few pages in the database, you can run page rank on the
-pages using the sprank.py program.  You simply tell it how many page
+pages using the {\bf sprank.py} program.  You simply tell it how many page
 rank iterations to run.
 
 \beforeverb
@@ -4989,7 +4989,7 @@ You can dump the daabase again to see that page rank has been updated:
 \afterverb
 %
 You can run {\bf sprank.py} as many times as you like and it will simply refine
-the page rank the more times you run it.  You can even run {\bf sprank.py} a few times
+the page rank each time you run it.  You can even run {\bf sprank.py} a few times
 and then go spider a few more pages sith {\bf spider.py} and then run {\bf sprank.py}
 to re-converge the page rank values.  A search engine usually runs both the crawling and 
 ranking programs all the time.
@@ -5021,7 +5021,7 @@ How many iterations:50
 \afterverb
 %
 For each iteration of the page rank algorithm it prints the average
-change per page of the page rank.   The network initially is quite
+change in page rank per page.   The network initially is quite
 unbalanced and so the individual page rank values change wildly between
 iterations.
 But in a few short iterations, the page rank converges.  You
@@ -5052,7 +5052,7 @@ press refresh in the browser to get the new data from {\bf spider.json}.
 
 Up to this point in the book, you have become quite familiar with our 
 {\bf mbox-short.txt} and {\bf mbox.txt} data files.   Now it is time to take
-our analysis of E-Mail data to the next level.  
+our analysis of e-mail data to the next level.  
 
 Ii the real world, sometimes you have to pull down mail data from servers
 and that might take quite some time and the data might be inconsistent, 
@@ -5068,26 +5068,26 @@ You can download this application from:
 
 \url{www.py4inf.com/code/gmane.zip}
 
-We will be using data from a free E-Mail list archiving service called 
+We will be using data from a free e-mail list archiving service called 
 \url{www.gmane.org}.  This serivce is very popular with open-source
 proejcts because it rpovides a nice searchable archive of their project's
-E-Mail activity.  They also have a very liberal policy regarding accessing 
+e-mail activity.  They also have a very liberal policy regarding accessing 
 their data through their API.  They have no rate limits, but ask that you 
 don't overload their service and take only the data you need.  You can read
 gmane's terms and conditions at this page:
 
 \url{http://gmane.org/export.php}
 
-{\em So it is very important that you make use of the gmane.org data
-responsibly by adding delays ot your access of their services and spreading
+{\em It is very important that you make use of the gmane.org data
+responsibly by adding delays to your access of their services and spreading
 long-running jobs over a longer period of time.  Do not abuse this free service
 and ruin it for the rest of us.}
 
-When I spidered the Sakai email data using this software, it produced nearly 
-a Gigabyte of data and I spread the download process over about five days.  
+WHen the Sakai e-mail data was spidered using this software, it produced nearly 
+a Gigabyte of data and took a number of runs on several days.
 The file {\bf README.txt} in the above ZIP may have instructions as to how
 you can download a pre-spidered copy of the {\bf content.sqlite} file for 
-a majority of the Sakai email corpus so you don't have to spider for 
+a majority of the Sakai e-mail corpus so you don't have to spider for 
 five days just to run the programs.  If you download the pre-spidered
 content, you should still run the spidering process to catch up with 
 more recent messages.
@@ -5105,8 +5105,8 @@ its data in a database and can be interrupted and re-started
 as often as needed.   It may take many hours to pull all the data
 down.  So you may need to restart several times.
 
-Here is a run of gmane.py getting the last five messages of the
-sakai developer list:
+Here is a run of {\bf gmane.py} retrieving the last five messages of the
+Sakai developer list:
 
 \beforeverb
 \begin{verbatim}
@@ -5132,7 +5132,7 @@ already spidered and starts spidering at that message.  It continues spidering
 until it has spidered the desired number of messages or it reaches a page
 that does not appear to be a properly formatted message.
 
-Sometimes {\url gmane.org} is missing a message.  Perhaps administrators can delete messages
+Sometimes \url{gmane.org} is missing a message.  Perhaps administrators can delete messages
 or perhaps they get lost.   If your spider stops, and it seems it has hit
 a missing message, go into the SQLite Manager and add a row with the missing id leaving
 all the other fields blank and restart {\bf gmane.py}.   This will unstick the 
@@ -5157,9 +5157,9 @@ smaller) than {\bf content.sqlite} because it also compresses the header and bod
 
 Each time {\bf gmodel.py} runs - it deletes and re-builds {\bf index.sqlite}, allowing
 you to adjust its parameters and edit the mapping tables in {\bf content.sqlite} to tweak the 
-data cleaning process. This is a sample run of {\bf gmadel.py}.  It prints a line out each time
+data cleaning process. This is a sample run of {\bf gmodel.py}.  It prints a line out each time
 250 mail messages are processed so you can see some progress happening as this program may
-run for a while processing nearly a Gigabyre of mail data.
+run for a while processing nearly a Gigabyte of mail data.
 
 \beforeverb
 \begin{verbatim}
@@ -5173,11 +5173,11 @@ Loaded allsenders 1588 and mapping 28 dns mapping 1
 \afterverb
 %
 
-The {\bf gmodel.py} program handles a number of data cleaing tasks.
+The {\bf gmodel.py} program handles a number of data cleaning tasks.
 
-Domain names are truncated to two levels for .com, .org, .edu, and .net 
-other domain names are truncated to three levels.  So si.umich.edu becomes
-umich.edu and caret.cam.ac.uk becomes cam.ac.uk.   Also mail addresses are
+Domain names are truncated to two levels for .com, .org, .edu, and .net.
+Other domain names are truncated to three levels.  So si.umich.edu becomes
+umich.edu and caret.cam.ac.uk becomes cam.ac.uk.   Also e-mail addresses are
 forced to lower case and some of the @gmane.org address like the following
 
 \beforeverb
@@ -5186,13 +5186,13 @@ forced to lower case and some of the @gmane.org address like the following
 \end{verbatim}
 \afterverb
 %
-are converted to the real address whenever there is a matching real email
+are converted to the real address whenever there is a matching real e-mail
 address elsewhere in the message corpus.
 
 If you look in the {\bf content.sqlite} database there are two tables that allow
-you to map both domain names and individual email addresses that change over 
-the lifetime of the email list.  For example, Steve Githens used the following
-email addresses as he changed jobs over the life of the Sakai developer list:
+you to map both domain names and individual e-mail addresses that change over 
+the lifetime of the e-mail list.  For example, Steve Githens used the following
+e-mail addresses as he changed jobs over the life of the Sakai developer list:
 
 \beforeverb
 \begin{verbatim}
@@ -5213,8 +5213,7 @@ sgithens@cam.ac.uk -> swgithen@mtu.edu
 \afterverb
 %
 You can also make similar entries in the DNSMapping table if there are multiple
-DNS names you want mapped to a single DNS.  In the Sakai data I added the following
-mapping:
+DNS names you want mapped to a single DNS.  The following mapping was added to the the Sakai data:
 
 \beforeverb
 \begin{verbatim}
@@ -5222,14 +5221,14 @@ iupui.edu -> indiana.edu
 \end{verbatim}
 \afterverb
 %
-So all the folks from the various Indiana University campuses are tracked together.
+So all the accounts from the various Indiana University campuses are tracked together.
 
 You can re-run the {\bf gmodel.py} over and over as you look at the data, and add mappings
 to make the data cleaner and cleaner.   When you are done, you will have a nicely
-indexed version of the email in {\bf index.sqlite}.   This is the file to use to do data
+indexed version of the e-mail in {\bf index.sqlite}.   This is the file to use to do data
 analysis.   With this file, data analysis will be really quick.
 
-The first, simplest data analysis is to determine "who sent the most mail" and "which 
+The first, simplest data analysis is to determine "who sent the most mail?" and "which 
 organzation sent the most mail"?  This is done using {\bf gbasic.py}:
 
 \beforeverb
@@ -5259,9 +5258,9 @@ or even {\bf gmodel.py}. They are all working on the same data, but
 {\bf index.sqlite}.  If you have a lot of data to manage, a multi-step
 process like the one in ths application may take a little longer to develop,
 but will save you a lot of time when you really start to explore
-and vizualize your data.
+and visualize your data.
 
-Youcan produce a simple vizualization of the word frequence in the subject lines
+You can produce a simple visualization of the word frequence in the subject lines
 in the file {\bf gword.py}:
 
 \beforeverb
@@ -5273,10 +5272,10 @@ Output written to gword.jsonp
 %
 
 This produces the file {\bf gword.jsonp} which you can visualize using
-{\bf gword.htm} to produce a word cloud siilar to the one at the beginning 
+{\bf gword.htm} to produce a word cloud similar to the one at the beginning 
 of this section.
 
-A second visualization is produced  by {\bf gline.py}.  It computes email 
+A second visualization is produced  by {\bf gline.py}.  It computes e-mail 
 participation by organizations over time.
 
 \beforeverb
@@ -5296,8 +5295,8 @@ Its output is written to {\bf gline.jsonp} which is visualized using {\bf gline.
 \centerline{\includegraphics[height=2.50in]{figs2/mailorg.eps}}
 \afterfig
 
-This is a relatively complex and sophisticated application and is pretty much
-ready to do some heavy data retrieval and analysis from mail data using 
+This is a relatively complex and sophisticated application and 
+has features to do some real data retrieval, cleaning and visualization.
 \url{gmane}.
 
 \chapter{Automating common tasks on your computer}
