--- a/cfbook.tex
+++ b/cfbook.tex
@@ -5045,7 +5045,7 @@ This shows an automatic layout of the nodes and links.  You can click and
 drag any node and you can also double click on a node to find the URL
 that is represented by the node.
 
-If you rerun the other utilities, re-run {\bf spjson.py} 
+If you re-run the other utilities, re-run {\bf spjson.py} 
 press refresh in the browser to get the new data from {\bf spider.json}.
 
 \section{Visualizing mail data}
@@ -5083,7 +5083,7 @@ responsibly by adding delays to your access of their services and spreading
 long-running jobs over a longer period of time.  Do not abuse this free service
 and ruin it for the rest of us.}
 
-WHen the Sakai e-mail data was spidered using this software, it produced nearly 
+When the Sakai e-mail data was spidered using this software, it produced nearly 
 a Gigabyte of data and took a number of runs on several days.
 The file {\bf README.txt} in the above ZIP may have instructions as to how
 you can download a pre-spidered copy of the {\bf content.sqlite} file for 
@@ -5297,7 +5297,6 @@ Its output is written to {\bf gline.jsonp} which is visualized using {\bf gline.
 
 This is a relatively complex and sophisticated application and 
 has features to do some real data retrieval, cleaning and visualization.
-\url{gmane}.
 
 \chapter{Automating common tasks on your computer}
 
@@ -5746,7 +5745,7 @@ T-Mobile: ./2005/01/02-01-05_1858001.txt
 Just for fun, run the program a second time and it will produce no output
 since the bad files are already gone.
 
-If we rerun {\tt txtcount.py} we can see that we have removed
+If we re-run {\tt txtcount.py} we can see that we have removed
 899 bad files:
 \beforeverb
 \begin{verbatim}
