Typos and ore index entrieds for Romeo and Juliet.

--- a/book.tex
+++ b/book.tex
@@ -6174,6 +6174,7 @@ has a type and a value.
 \begin{ex}
 Download a copy of the file from 
 \url{www.py4inf.com/code/romeo.txt}
+\index{Romeo and Juliet}
 
 Write a program to open the file {\tt romeo.txt} and read it
 line by line.  For each line, split the line into  a list of 
@@ -6597,6 +6598,7 @@ the outer loop makes a single iteration, we think of the inner
 loop as iterating ``more quickly'' and the outer loop as iterating 
 more slowly.
 
+\index{Romeo and Juliet}
 The combination of the two nested loops ensures that we will count
 every word on every line of the input file.
 
@@ -6740,6 +6742,7 @@ So now the keys are in alphabetical order.
 
 \section{Advanced text parsing}
 
+\index{Romeo and Juliet}
 In the above example using the file {\tt romeo.txt},
 we made the file as simple as possible by removing 
 any and all punctuation by hand.  The real text 
@@ -7233,6 +7236,7 @@ with one or more sort keys preceding the elements from the sequence,
 \index{pattern!DSU}
 \index{decorate-sort-undecorate pattern}
 \index{pattern!decorate-sort-undecorate}
+\index{Romeo and Juliet}
 
 For example, suppose you have a list of words and you want to
 sort them from longest to shortest:
@@ -7477,8 +7481,8 @@ The output of this loop is:
 
 \beforeverb
 \begin{verbatim}
-0 a
-2 c
+10 a
+22 c
 1 b
 \end{verbatim}
 \afterverb
@@ -7511,12 +7515,13 @@ matter to sort the list in reverse order and print out the new, sorted list.
 \end{verbatim}
 \afterverb
 %
-By hand-constructing the list of tuples to have the value as the first
+By carefully constructing the list of tuples to have the value as the first
 element of each tuple, we can sort the list of tuples and get our dictionary
 contents sorted by value.
 
 \section{The most common words}
 
+\index{Romeo and Juliet}
 Coming back to our running example of the text from \emph{Romeo and Juliet} 
 Act 2, Scene 2, we can augment our program to use this technique to 
 print the ten most common words in the text as follows:
