--- a/cfbook.tex
+++ b/cfbook.tex
@@ -1892,6 +1892,7 @@ Matches any non-digit character; equivalent to the set [\verb"^"0-9].
 Support for searching files using regular expressions was built into the UNIX operating system 
 since the 1960's and it is available in nearly all programming languages in one form or another.
 
+\index{grep}
 As a matter of fact, there is a command-line program built into UNIX 
 called {\bf grep} (Generalized Regular Expression Parser) that does pretty much 
 the same as the {\tt search()} examples in this chapter.  So if you have a 
